# mcp-omnifocus

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_omnifocus/: __init__.py  __main__.py  server.py
src/mcp_omnifocus/utils/: omnifocus.py  scripting.py
tests/: conftest.py  test_omnifocus.py  test_scripting.py
