[project]
name = "mcp-omnifocus"
version = "0.2.0"
description = "MCP server for controlling OmniFocus"
readme = "README.md"
authors = [
    { name = "someposer", email = "someposer@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.scripts]
mcp-omnifocus = "mcp_omnifocus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
python_files = ["test_*.py"]
testpaths = [
    "tests"
]
markers = [
    "requires_omnifocus: mark test as requiring OmniFocus to be available",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
unfixable = ["B"]
